--- a/trunk/perldoc/ko/perl/5.10/perltoot.pod
+++ b/trunk/perldoc/ko/perl/5.10/perltoot.pod
@@ -1,5 +1,5 @@
 
-=encoding euc-jp
+=encoding utf-8
 
 =head1 NAME
 
@@ -9,7 +9,7 @@ perltoot - Tom's object-oriented tutorial for perl
 
 =end original
 
-perltoot - トムによる Perl オブジェクト指向チュートリアル
+perltoot - Tom 의 Perl 오브젝트지향 튜토리얼
 
 =head1 DESCRIPTION
 
@@ -21,12 +21,12 @@ special about an object?  Just what I<is> an object anyway?
 
 =end original
 
-オブジェクト指向プログラミングは、昨今の、ビッグセラーです。
-マネージャーには、薄切りパン(訳註：良い発明のこと)よりもむしろ
-オブジェクトを持ちたがる人もいます。
-どうしてでしょうか?
-オブジェクトの、何がそんなに特別なんでしょうか? 
-そもそも、オブジェクトとは一体 I<なんでしょう> か?
+오브젝트지향 프로그램은, 요즘 인기입니다.
+매니저에게는, 얇게 잘린 빵(좋은 발명을 일컫는 말) 보다도 오히려 
+오브젝트를 가지려는 사람도 있습니다.
+어떻습니까?
+오브젝트의, 뭐가 그렇게 특별한 걸까요?
+그전에 도대체 오브젝트라는 것은 I<뭘까요?>
 
 =begin original
 
@@ -42,18 +42,18 @@ that you void the warranty if you muck with the cover.  So don't do that.
 
 =end original
 
-オブジェクトは、きちんとした小さな使いやすい包みに包んで、
-複雑なふるまいを遠くへやってしまう方法以外のなにものでもありません
-(専門家は、このことを抽象化と呼びます)。
-本当に難しい問題を片付けようと、何週間もぼーっと過ごしている、
-かしこい人たちは、普通の人でも使える、これらの素敵なオブジェクトを
-作ります(専門家は、このことをソフトウェアの再利用と呼びます)。
-オブジェクトを使う人(たぶん、プログラマ)は、自分が欲しい小さな包みを
-いじることができます。
-ですが、その包みを開けようとはしないし、その中を散らかそうともしないでしょう。
-ちょうど、ハードウェアの高価な部分のように、契約は次のようになっています。
-カバーをいじくれば、保証は無効になります、と。
-ですから、そんなことをしてはいけません。
+오브젝트는 제대로 된 작고 사용하기 쉬운 포장지에 포장해서,
+복잡한 행동을 멀리 날려버리는 방법 이외의 무엇도 아닙니다.
+(전문가는 이것을 추상화라고 부릅니다).
+정말로 어려운 문제를 정리려면, 몇 주씩이나 팟 하고 지나가버리고,
+똑똑한 사람들은, 보통의 사람이라도 사용할 수 있는 그런 훌륭한 오브젝트를 
+만듭니다(전문가는, 이것을 소프트웨어의 재이용이라고 부릅니다).
+오브젝트를 사용하는 사람(아마도 프로그래머)는, 자신이 원하는 작은 포장을 
+건드릴 수 있습니다.
+하지만, 그 포장을 열려고는 하지 않고, 그 안을 어지럽히려고도 하지않겠죠.
+딱, 하드웨어의 비싼 부분처럼, 계약은 다음처럼 되어있습니다. 
+"커버를 벗기면, 보증은 무효하게 됩니다. "라고...
+그래서, 그런 것은 해서는 안됩니다.
 
 =begin original
 
@@ -66,14 +66,13 @@ that they belong to some package.
 
 =end original
 
-オブジェクトの核心は、クラスです。
-クラスは、守られた小さな私的な名前空間であり、データと関数に満ちています。
-クラスは関連したルーチンのセットであり、いくつかの問題領域を扱います。
-クラスをユーザ定義の型と考えることもできます。
-Perl のパッケージの仕組は、より伝統的なモジュールと同じように、
-クラスモジュールにも使われます。
-オブジェクトは、クラスの中に、 "住んで(生きて)"います。
-このことは、オブジェクトがいくつかのパッケージに属していることを意味します。
+오브젝트의 핵심은, 클래스입니다.
+클래스는, 작은 이름공간이고, 데이터와 함수로 구성됩니다.
+클래스는 관련된 루틴의 세트이고, 몇개인가의 문제영역을 취급합니다.
+클래스를 유저정의의 형태로 생각할 수도 있습니다.
+Perl 의 패키지의 구성은, 보다 전통적인 모듈처럼, 클래스모듈에도 사용됩니다.
+오브젝트는, 클래스 안에, "살고" 있습니다.
+이 것은, 오브젝트가 몇개인가의 패키지에 소속되어 있는 것을 의미합니다.
 
 =begin original
 
@@ -89,19 +88,18 @@ kind of method.
 
 =end original
 
-たいてい、クラスは、それを使う人にいくつかの小さな包みを提供します。
-それらの包みがオブジェクトです。
-オブジェクトは、自分が属しているクラスを知っていて、どのように振る舞うかも
-知っています。
-クラスを使う人は、クラスに、何かをするように、たとえば、
-"オブジェクトをちょうだい"のように、頼むか、
-オブジェクトの 1 つに何かをするように頼むことができます。
-クラスに何かをするように頼むことは、I<クラスメソッド> を呼ぶことです。
-オブジェクトに何かをするように頼むことは、I<オブジェクトメソッド>を
-呼ぶことです。
-クラス(ふつう)または、オブジェクト(たまに)に、オブジェクトを返すように
-頼むことは、I<コンストラクタ>を呼ぶことです。
-コンストラクタは、メソッドの一種です。
+클래스는, 클래스를 사용하는 사람에게 몇개인가의 작은 묶음을 제공합니다.
+그것들의 묶음이 오브젝트입니다.
+오브젝트는, 자신이 소속하고 있는 클래스를 알고 있고, 어떤 행동을 하는지도 
+알고 있습니다.
+클래스를 사용하는 사람은 클래스에 뭔가를 하도록, 예를 들어,
+"오브젝트를 줘" 라고 하는 것처럼, 받기를 원하는 지, 
+오브젝트중 하나에 뭔가를 하기를 바랄 수도 있습니다.
+클래스에 뭔가를 하도록 원하는 것은, I<클래스 메소드>를 부르는 것입니다.
+오브젝트에 뭔가를 하도록 원하는 것은, I<오브젝트메소드>를 부르는 것입니다.
+클래스(보통) 또는, 오브젝트(때때로)에, 오브젝트를 반환하기를 
+원하는 것은, I<생성자>를 호출하는 것입니다.
+생성자는 메소드의 한 종류입니다.
 
 =begin original
 
@@ -115,16 +113,15 @@ In a word, with I<methods>.
 
 =end original
 
-それはそれとして、オブジェクトは Perl の他のデータ型とどのように
-違うのでしょうか?
-I<実際には>、オブジェクトは...オブジェクトの基礎の型は何なのでしょうか?
-最初の質問に答えるのは、簡単です。
-オブジェクトは、一つの、たった一つのやり方において、Perl の他のデータ型とは
-違っています。
-オブジェクトをデリファレンスするのに、単純な配列やハッシュのように、
-単なる文字列や数字の添字ではなく、名前の付けられたサブルーチンの呼出しを
-使います。
-一言でいえば、I<メソッド> でデリファレンスします。
+그것은 그렇다치고, 오브젝트는 Perl 이외의 데이터 형태와 어떻게 
+다른 것일까요?
+I<실제로는>, 오브젝트는.. 오브젝트의 기초의 형태는 뭘까요?
+첫번째 질문에 답하는 것은 간단합니다.
+오브젝트는 하나의, 단 하나의 방법에 의해, Perl 의 다른 데이터 형태와는 
+다릅니다.
+오브젝트를 디리퍼런스하는 것에, 단순한 배열이나 해쉬처럼
+문자열이나 숫자의 첨자가 아닌, 이름이 붙은 서브루틴의 호출을 사용합니다.
+한마디로 하면, I<메소드> 로 디리퍼런스합니다.
 
 =begin original
 
@@ -139,22 +136,21 @@ of its inherent flexibility, an object is usually a hash reference.
 
 =end original
 
-二番目の答えは、次のようになります。
-オブジェクトはリファレンスですが、ただのリファレンスではありません。
-注意してください。
-特別なクラス(パッケージ)に I<祝福(bless)され> ているリファレントを
-持っているものです。
-リファレンスの種類は?
-たぶん、その質問の答えは、あまり具体的にはなりません。
-Perlでは、基礎となる固有のデータ型として、リファレンスならどんな種類の
-ものでも、クラス設計者の好きなように使うことが出来るからです。
-リファレンスなら、スカラーでも、配列でも、ハッシュでもかまいません。
-コードのリファレンスすらありえます。
-ですが、持ち前の柔軟性により、普通、オブジェクトはハッシュリファレンスです。
+두번째의 답은, 다음과 같습니다.
+오브젝트는 리퍼런스이지만, 단순한 리퍼런스가 아닙니다.
+주의해주세요.
+특별한 클래스(패키지)에 I<축복(bless)받은> 리퍼런스를 가지고 있는 것입니다.
+리퍼런스의 종류는?
+아마도, 그 질문의 답은, 그다지 구체적이지 않습니다.
+Perl 에서는, 기초가 되는 고유의 데이터형태로써, 리퍼런스라면 어떤 종류의
+것이라도, 클래스 설계자가 좋을대로 사용할 수 있기 때문입니다.
+리퍼런스라면, 스칼라에서도, 배열에서도, 해쉬에서라도 상관없습니다.
+코드의 리퍼런스도 가능합니다.
+하지만, 가지기 전의 유연성에 의해, 보통 오브젝트는 해쉬리퍼런스입니다.
 
 =head1 Creating a Class
 
-(クラスを作る)
+(클래스 만들기)
 
 =begin original
 
@@ -167,13 +163,12 @@ these objects from a distance.
 
 =end original
 
-クラスを作る前に、クラスに何という名前を付けるかを決めなければなりません。
-クラス(パッケージ)の名前は、普通のモジュールと同じように、クラスを納める
-ファイル名を左右します。
-それから、そのクラス(パッケージ)は、一つか、それ以上の方法で、オブジェクトを
-生成する方法を提供すべきです。
-最後に、クラス(パッケージ)は、オブジェクトを使う人に、離れたところから
-間接的にオブジェクトを操作することのできるメカニズムを提供すべきです。
+클래스를 만들기 전에, 클래스에 어떤 이름을 붙일까를 결정해야 합니다.
+클래스(패키지)의 이름은, 보통 모듈처럼 클래스를 넣는 파일이름을 좌우합니다.
+그리고, 그 클래스(패키지)는 하나 이상의 방법으로 오브젝트를 생성하는 방법을 
+제공해야합니다.
+마지막에 클래스(패키지)는, 오브젝트를 사용하는 사람에게 떨어진 곳에서 
+간접적으로 오브젝트를 조작하는 것이 가능한 메커니즘을 제공해야 합니다.
 
 =begin original
 
@@ -189,18 +184,17 @@ variable accessibility, or anything else.
 
 =end original
 
-例えば、単純な Person クラスモジュールを作ってみましょう。
-このクラスモジュールは、Person.pm に保存されます。
-もし、このクラスモジュールが、Happy::Person クラスと呼ばれるなら、
-このクラスは、Happy/Person.pm ファイルに保存されます。
-そして、そのパッケージは、ただの、Person ではなく、Happy::Person になります。
-(Unix か、Plan 9 ではなく、Mac OS やVMS のような OS の動いている
-パーソナルコンピュータ上では、ディレクトリのセパレータは
-違っているでしょうが、原則は同じです)。
-ディレクトリ名のベースとなるモジュールとの間にどのような公式な関係も
-想定してはいけません。
-これは、単に、グループ別けを便利にしているだけで、継承や変数の
-アクセシビリティなど、その他諸々に、何の効果も与えません。
+예를 들면, 단순한 Person 클래스모듈을 만들어봅시다.
+이 클래스 모듈은 Person.pm 으로 저장됩니다.
+만약, 이 클래스모듈이, Happy::Person 클래스로 불려지면,
+이 클래스는, Happy/Person.pm 파일에 보존됩니다.
+그리고, 이 패키지는 단순한 Person 이 아니라, Happy::Person 이 됩니다
+(Unix 나, Plan 9 가 아닌 Mac OS 나 VMS 같은 OS 에서 움직이는 
+퍼스널컴퓨터위에서는 디렉토리의 구분자는 다르겠지만, 원리는 같습니다).
+디렉토리 이름의 기본이 되는 모듈과의 사이에 어떤 공식적인 관계도 
+상정해서는 안됩니다. 
+이것은 단순히, 그룹을 나누는 것을 편리하게 하는 것는 것 뿐으로, 
+계승이나 변수의 접근성 등, 그외 여러가지에 어떤 효과도 주지 않습니다.
 
 =begin original
 
@@ -215,17 +209,16 @@ more than that methods may now be called against it.
 
 =end original
 
-このモジュールに Exporter は使わないでおきましょう。
-私たちは行儀が良いし、行儀が良いクラスモジュールはまったく何も
-export しないからです(訳註:文法が?)。
-オブジェクトを作るためには、クラスに、I<コンストラクタメソッド> が必要です。
-コンストラクタは、普通のデータ型ではなく、おろしたてのクラスのオブジェクトを
-返します。
-この魔法は、bless() 関数によって、扱われます。
-bless() の唯一の目的は、リファレンスをオブジェクトとして使えるように
-することです。
-銘記:オブジェクトであることは、実際には、メソッドが、そのオブジェクトを
-背景にして、呼ばれるということ以上に何も意味しません。
+이 모듈에 Exporter 는 사용하지 맙시다.
+우리들은 잘 움직이는 좋은 클래스 모듈은 아무것도 export 하지 
+않기때문입니다.
+오브젝트를 만들기 위해서는, 클래에 I<생성자 메소드> 가 필요합니다. 
+생성자는, 보통 데이터 형태가 아니라, 새로운 클래스의 오브젝트를 제공합니다. 
+이 마법은, bless() 함수에 의해 취급됩니다. 
+bless() 의 유일한 목적은, 리퍼런스를 오브젝트로써 
+사용할 수 있도록 하는 것입니다.
+기억하세요! : 오브젝트인 것은 실제로는 메소드가 그 오브젝트를 대신해서
+불려진 것 이외에 아무 의미도 없습니다. 
 
 =begin original
 
