--- a/trunk/perldoc/ko/perl/5.10/perltoot.pod
+++ b/trunk/perldoc/ko/perl/5.10/perltoot.pod
@@ -230,16 +230,15 @@ the same name as the class as the constructor.
 
 =end original
 
-コンストラクタは、好きなように名付けても構いませんが、ほとんどの
-Perl プログラマは、コンストラクタを、new() と呼ぶのを好むようです。
-ですが、new() は、予約語ではありませんし、クラスにはそういったものを供給する
-義務もありません。
-コンストラクタとして、クラスと同じ名前の関数を使うプログラマにがいることも
-知られています。
+생성자는, 좋을대로 이름붙여도 상관없지만, 대부분의 Perl 프로그래머는,
+생성자를 new() 라고 부르는 것을 좋아하는 듯 합니다.
+하지만, new() 는, 예약어가 아니고, 클래스에는 그런 것을 공급할 의무도 없습니다.
+생성자로써, 클래스와 같은 이름의 함수를 사용하는 프로그래머가 있다는 것도 
+알수 있습니다. 
 
 =head2 Object Representation
 
-(オブジェクトの表現)
+(오브젝트의 표현)
 
 =begin original
 
@@ -250,10 +249,10 @@ an arbitrary name of your own devising.
 
 =end original
 
-Pascal のレコードや、C の構造体や、C++ のクラスを表すために、
-Perl で使われている、もっとも一般的なメカニズムは、無名ハッシュです。
-ハッシュには任意の数のデータ領域があり、自分でつけた任意の名前で、
-それぞれにアクセスしやすいからです。
+Pascal 의 레코드나, C 의 구조체나, C++ 의 클래스를 나타내기 위해서,
+Perl 로 사용되는, 제일 일반적인 메커니즘은 이름없는 해쉬입니다.
+해쉬에는 임의의 수의 데이터영역이 있고, 자신이 붙인 임의의 이름으로 
+그것들에 접근하기 쉽기 때문입니다.
 
 =begin original
 
@@ -262,7 +261,7 @@ struct-like emulation, you would likely go about it something like this:
 
 =end original
 
-単純な構造体風なエミュレーションをするなら、次のようにすることができます:
+단순한 구조체같은 에뮬레이션을 하려면, 다음처럼 할 수가 있습니다.
 
     $rec = {
         name  => "Jason",
@@ -277,8 +276,8 @@ by up-casing the hash keys:
 
 =end original
 
-違いをつけたいと感じたら、大文字のハッシュキーによって、
-見た目に、ちょっとした違いを加えることができます:
+차이를 알고 싶다고 느낀다면, 대문자의 해쉬 키에 의해서,
+보는 것만으로, 조금 다른 차이를 줄 수 가 있습니다.
 
     $rec = {
         NAME  => "Jason",
@@ -295,11 +294,11 @@ be named "Jason" these days? :-)
 
 =end original
 
-これで、C<< $rec->{NAME} >> で、"Jason" を見付けることができるようになり、
-また、C<< @{ $rec->{PEERS} } >> で、"Norbert" と、"Rhys" と "Phineas" を
-得ることができます。
-(昨今、どれくらい多くの、23 才のプログラマが、Jason と
-名付けられているか気にしたことがありますか? :-)
+이것으로,  C<< $rec->{NAME} >> 으로, "Jason" 을 발견할 수가 있게 되고, 
+또, C<< @{ $rec->{PEERS} } >> 로, "Norbert" 와, "Rhys" 와 "Phineas" 를 
+얻을 수가 있습니다.
+(요즘, 얼마나 많은 23세의 프로그래머가 Jason이라는 이름을 가지고 있는 가 
+신경 쓴 적이 있나요? :-))
 
 =begin original
 
@@ -313,18 +312,18 @@ instead of brackets or braces.
 
 =end original
 
-これと同じモデルは、複数のクラスでよく使われてます。
-とはいっても、クラスの外から、皆がオブジェクトにワルツを踊らせて、
-そのデータメンバにずうずうしく直接にアクセスすることは、
-プログラミングの礼儀正しさの頂点をよく考えたものではありません。
-概して、オブジェクトは、I<オブジェクトメソッド>を使ってアクセスする、
-不可解なクッキーと考えるべきです。
-見た目には、メソッドは、ブラケットや、ブレイスの代わりに、
-関数名を使って、リファレンスをデリファレンスしているように見えます。
+이것과 같은 모델은, 복수의 클래스로 자주 사용됩니다.
+그렇다고 해도, 클래스의 밖에서, 모두가 오브젝트에 왈츠를 추도록 하고,
+그 데이터 멤버에 어쩌구 저쩌구 해서 직접 접근하는 것은,
+프로그램의 예의바른 정점을 깊이 생각한 것이 아닙니다.
+간단하게, 오브젝트는 I<오브젝트 메소드>를 사용해서 접근하고, 
+알지 못하는 쿠키라고 생각해야 합니다.
+보기에는 메소드는 브라켓이랑 브레이스 대신에, 
+함수명을 사용하고, 리퍼런스를 디리퍼런스하고 있는 것처럼 보입니다.
 
 =head2 Class Interface
 
-(クラスのインターフェース)
+(클래스의 인터페이스)
 
 =begin original
 
@@ -338,15 +337,15 @@ with a non-prime one instead, you can't expect the compiler to catch this.
 
 =end original
 
-言語には、クラスのメソッドのための正式な総合のインターフェースを
-提供しているものもありますが、Perl は、そうではありません。
-使う人がそれぞれのクラスのドキュメントを読むのを当てにしています。
-定義されていないメソッドをオブジェクトで呼んだら、Perl は、文句を
-言おうとはしませんが、プログラムは、実行している間に、例外をおこすでしょう。
-同じように、引数に素数を期待するメソッドに、素数でない数字を引数にして
-呼んだとしても、コンパイラがそのことをとらえてくれることは期待できません。
-(たぶん、あなたは、コンパイラにあなたの好むすべてを期待するでしょうが、
-そんなことは起こりません。)
+언어에는, 클래스의 메소드를 위해 정식 종합 인터페이스를 제공하고 있는 것도
+있습니다만, Perl 은 그렇지 않습니다.
+사용하는 사람이 그 나름대로의 클래의 문서를 읽는 것을 맞게 하고 있습니다.
+정의되어 있지 않은 메소드를 오브젝트로 호출하면, Perl 은, 경고를 내려고
+하지는 않지만, 프로그램은 실행하고 있는 중간에, 예외를 발생시킬 겁니다.
+이처럼, 인수에 요소를 기대하는 메소드에게, 요소가 아닌 숫자를 인수로 해서 
+호출했다고 해도, 컴파일러가 그것을 알아차리는 것은 기대할 수 없습니다.
+(아마도, 당신은 컴파일러에 당신의 좋아하는 모든 것을 기대했을 테지만, 
+그런 것은 일어나지 않습니다.)
 
 =begin original
 
@@ -356,9 +355,9 @@ interface.  Here's how they might use the Person class:
 
 =end original
 
-Person クラスを使う人が、よく教育された、所定のインターフェースを
-説明するドキュメントを読んでいる人だと想定しましょう。
-Person クラスの使いかたがここにあります:
+Person 클래스를 사용하는 사람이 잘 교육받은 소정의 인터페이스를 
+설명하는 문서를 읽고 있는 사람이라고 상정해봅시다.
+Person 클래스의 사용법이 여기에 있습니다.
 
     use Person;
 
@@ -373,7 +372,7 @@ Person クラスの使いかたがここにあります:
 
 =end original
 
-    push @All_Recs, $him;  # 後のために、オブジェクトを配列にいれます。
+    push @All_Recs, $him;  # 나중을 위해 오브젝트를 배열에 넣습니다.
 
     printf "%s is %d years old.\n", $him->name, $him->age;
     print "His peers are: ", join(", ", $him->peers), "\n";
@@ -390,15 +389,16 @@ ever play with.
 
 =end original
 
-上のように、そのクラスを使う人は、オブジェクトにある特定の実装があるか、
-他の実装があるかを知りません(すくなくとも、その事実に注意を払うかは
-無関係です)。
-クラスとそのオブジェクトへのインターフェースは、専らメソッド経由です。
-そして、クラスを使う人はみんな、メソッドをいじるべきです。
+위처럼, 그 클래스를 사용하는 사람은, 오브젝트에 있는 특정의 구성이 있는 지,
+다른 구성이 있는 지를 알지 못합니다(적어도, 그 사실에 주의를 기울여야 하는가는
+관계 없습니다).
+클래스와 그 오브젝트의 인터페이스는 안쪽 메소드를 경유합니다.
+그리고 클래스를 사용하는 사람은 모두, 메소드를 건드려야 합니다. 
 
 =head2 Constructors and Instance Methods
 
-(コンストラクタとインスタンスメソッド)
+(생성자와 인스턴스 메소드)
+
 
 =begin original
 
@@ -411,14 +411,14 @@ peers() to get at per-object data hidden away in our anonymous hash.
 
 =end original
 
-まだ、I<誰か> は、オブジェクトに何があるかを知る必要があります。
-そして、その誰かとは、クラスです。
-クラスはプログラマが、オブジェクトにアクセスするのに使うメソッドを実装します。
-ここに示すのは、標準的なオブジェクトのようにハッシュリファレンスを使う
-イディオムを使い、Person クラスに実装する方法です。
-コンストラクタとして働く new() というクラスメソッドを作りましょう。
-そして、3 つのオブジェクトメソッド、name() と、age() と、peers() を作り、
-オブジェクトごとに、無名ハッシュにデータを隠すようにします。
+아직 I<어떤 것>은, 오브젝트에 뭐가 있는 지를 알 필요가 있습니다.
+그리고 그 어떤 것은 클래스입니다. 
+클래스는 프로그래머가 오브젝트에 접근하는 것에 사용하는 메소드를 구성합니다.
+여기에 나타내는 것은 표준 오브젝트처럼 해쉬 리퍼런스를 사용하는 문법을 
+사용해, Person 클래스에 구성하는 방법입니다. 
+생성자로써 움직이는 new() 같은 클래스 메소드를 만듭시다. 
+그리고 3개의 오브젝트 메소드, name() 과 age() 와 peers() 를 만들고 
+오브젝트마다, 이름없는 해쉬에 데이터를 숨기도록 합니다.
 
     package Person;
     use strict;
@@ -440,14 +440,14 @@ peers() to get at per-object data hidden away in our anonymous hash.
 =end original
 
     #########################################################
-    ## オブジェクトのコンストラクタ (単純化したバージョン )##
+    ## 오브젝트의 생성자(단순화한 버젼)                    ##
     #########################################################
     sub new {
         my $self  = {};
         $self->{NAME}   = undef;
         $self->{AGE}    = undef;
         $self->{PEERS}  = [];
-        bless($self);           # 下を見て下さい
+        bless($self);           # 아래를 봐주세요.
         return $self;
     }
 
@@ -463,10 +463,10 @@ peers() to get at per-object data hidden away in our anonymous hash.
 =end original
 
     #####################################################
-    ## オブジェクトごとのデータにアクセスするメソッド  ##
+    ## 오브젝트마다 데이터에 접근하는 메소드           ##
     ##                                                 ##
-    ## 引数があれば、値をセットする。引数がなければ    ##
-    ## 値を返す。                                      ##
+    ## 인수가 있다면, 값을 설정합니다. 인수가 있다면   ##
+    ## 값을 반환합니다.                                ##
     #####################################################
 
     sub name {
@@ -493,7 +493,7 @@ peers() to get at per-object data hidden away in our anonymous hash.
 
 =end original
 
-    1;  # require か、use を成功させるために
+    1;  # require 나 use 를 성공시키기 위해서 
 
 =begin original
 
@@ -504,12 +504,12 @@ value held by that field, meaning the value of that hash key.
 
 =end original
 
-オブジェクトのデータにアクセスする3つのメソッド、name()、age()、peers() を、
-作りました。
-これらは、実質は、すべて似たようなものです。
-引数つきで呼べば、しかるべきフィールドに、値をセットし、引数がなければ、
-そのフィールドに保持されている値を返します。
-ハッシュのキーの値を意味します。
+오브젝트의 데이터에 접근하는 3가지의 메소드, name(), age(), peers() 를 
+만들었습니다.
+이것들은, 사실 모두 비슷한 것들입니다.
+인수를 붙여 호출하면, 필드에 값을 설정하고, 인수가 없으면
+그 필드에 저장된 값을 반환합니다.
+해쉬의 키는 값을 의미합니다.
 
 =head2 Planning for the Future: Better Constructors
 
