--- a/perldoc/ko/perl/5.10/perltoot.pod
+++ b/perldoc/ko/perl/5.10/perltoot.pod
@@ -513,7 +513,7 @@ value held by that field, meaning the value of that hash key.
 
 =head2 Planning for the Future: Better Constructors
 
-(将来を考える：よりよいコンストラクタ)
+(미래를 생각하기 : 보다 좋은 생성자)
 
 =begin original
 
@@ -527,16 +527,17 @@ using the class passed into us, we make our constructor inheritable.
 
 =end original
 
-たとえ、この時点でその意味することを知らなくてよくても、いつの日か継承に
-悩むことになるでしょう。
-(お望みなら、今のところ継承を安全に無視し、後で、継承に悩むこともできます)。
-継承が、全てスムーズにうまくいくことを保証するには、bless() に2つの引数を
-渡さなければいけません。
-2番目の引数はクラスですが、リファレントを祝福(bless)するクラスです。
-デフォルトでは、(訳註:2番目の引数を省略すると)2番目の引数として自分自身の
-クラスを想定します。
-そのかわりに、(訳註:コンストラクタの第一引数に)渡されるクラスを使います。
-こうすることで、コンストラクタは継承できるようになります。
+예를 들어, 이 시점에서 그 의미하는 바를 몰라도 있어도, 언젠가는 계승에 
+대해 고민할 것입니다.
+(바라는 게 있다면, 지금 현재 계승을 안전하게 무시하고, 나중에 계승에 
+대해 고민할 수 도 있겠습니다).
+곗으이, 모든 게 부드럽고 잘 움직이는 것은 보증하려면, bless() 에 2개의 인수를
+넘기지 않으면 안됩니다.
+2번째의 인수는 클래스이지만, 리퍼런스를 bless하는 클래스입니다.
+기본값으로는, (2번째의 인수를 생략하면) 2번째의 인수로써 자기자신의 
+클래스를 상정합니다.
+그 대신에, (생성자의 첫번째 인수에) 넘겨지는 클래스를 사용합니다.
+이렇게 하는 것으로, 생성자는 계승될 수 있습니다.
 
     sub new {
         my $class = shift;
@@ -556,13 +557,13 @@ subsequent method calls.
 
 =end original
 
-これが、コンストラクタの全てです。
-これらのメソッドは、オブジェクトに命をもたらし、きちんとした、小さくて、
-不可解な束をユーザに返し、次のメソッドの呼出しに使われます。
+이것이, 생성자의 모든 것입니다.
+이런 메소드들은, 오브젝트에 생명을 가지고, 제대로 되고, 작은 
+알지 못하는 값을 유저에게 넘기고, 다음 메소드의 호출에 사용됩니다.
 
 =head2 Destructors
 
-(デストラクタ)
+(파괴자)
 
 =begin original
 
@@ -575,13 +576,13 @@ DESTROY.
 
 =end original
 
-全ての話には、始まりがあり、終わりがあります。
-オブジェクトの話の始まりには、コンストラクタがあり、オブジェクトが
-存在しはじめる時には、明示的にコンストラクタが呼ばれます。
-オブジェクトの話の終わりは、I<デストラクタですが>、このメソッドは、
-オブジェクトがその命を無くすときに暗黙のうちに呼ばれます。
-オブジェクトごとの後かたづけのコードがデストラクタにあり、デストラクタは、
-(Perlでは)DESTROYと呼ばれなければいけません。
+모든 얘기에는 시작이 있고, 끝이 있습니다.
+오브젝트의 이야기의 시작에는 생성자가 있고, 오브젝트가 
+존재하기 시작할 때에는 명시적인 생성자가 호출됩니다.
+오브젝트의 이야기의 끝은, I<파괴자>이지만, 이 메소드는, 
+오브젝트가 그 생명을 다했을 때에 암묵적으로 호출됩니다.
+오브젝트마다 뒷정리의 코드가 파괴자 있고, 파괴자는 
+(Perl에서는) DESTROY 라고 불리지 않으면 안됩니다.
 
 =begin original
 
@@ -596,20 +597,15 @@ called.
 
 =end original
 
-コンストラクタは恣意的な名前であるのに、なぜ、デストラクタは
-恣意的でないのでしょうか?
-その理由は、コンストラクタは、明示的に呼ばれますが、デストラクタは
-そうではないからです。
-デストラクタの呼出しは、Perl のガベージコレクションシステム経由で、
-自動的に起こります。
-素早いですが、幾分、怠惰なリファレンスに基づいた、ガベージ
-コレクションシステムです。
-呼ぶべきものが何かわかるように、Perl は、デストラクタが、DESTROY と
-名付けられることを、主張します。
-Perl はデストラクタを呼ぶ適切な時期を考えますが、現在のところいつ
-呼ばれるかははっきり定義されていません。
-このために、デストラクタは、それがいつ呼ばれるかを当てに
-すべきではありません。
+생성자는 임의의 이름인데 왜 파괴자는 임의적이지 않은 것일까?
+그 이유는, 생성자는 명시적으로 호출되지만, 파괴자는 그렇지 않기 때문입니다.
+파괴자의 호출은, Perl 의 가비지컬렉션 시스템 경유로 자동적으로 발생합니다.
+때론 빠르지만, 어느 부분에서는 나태한 리퍼런스에 기반한 가비지컬렉션입니다.
+호출해야할 것이 무엇인지 알 수 있도록, Perl 은 파괴자가 DESTROY 라고 
+이름지어지는 것을 주장합니다.
+Perl 은 파괴자를 호출하는 적절한 시기를 생각하지만, 현재 언제 호출되는 가는
+제대로 정의되어 있지 않습니다. 
+이 때문에, 파괴자는 그것이 언제 호출되는 가를 생각해야 되는 것은 아닙니다.
 
 =begin original
 
@@ -621,13 +617,13 @@ tied objects, described in L<perltie>.
 
 =end original
 
-なぜ、DESTORY はすべて大文字なのでしょう?
-Perl は、ときどき、慣例で全て大文字の関数名を使います。
-この関数は、なんらかの方法で Perl によって自動的に呼ばれるかも
-しれないことを示します。
-DESTROY の他に、暗黙のうちに呼ばれるものには、BEGIN や END や AUTOLOAD、
-加えて、L<perltie> に書かれている、tie されたオブジェクトに使われる全ての
-メソッドなどが含まれます。
+왜 DESTROY 는 모두 대문자일까?
+Perl 은 때때로 관례에서 모든 대문자의 함수명을 사용합니다.
+이 함수는, 어떤 방법으로 Perl 에 의해 자동적으로 호출될지도 모르는 것을 
+나타냅니다.
+DESTROY 외에, 암묵적으로 호출되는 것에는 BEGIN 이나 END 나 AUTOLOAD,
+거기에, L<perltie> 에 쓰여진, tie 된 오브젝트에 사용되는 모든 
+메소드등이 포함됩니다.
 
 =begin original
 
@@ -644,19 +640,19 @@ like memory deallocation.
 
 =end original
 
-本当によいオブジェクト指向プログラム言語では、ユーザは、デストラクタが
-呼ばれるときを気にしません。
-起こるであろうときに、ただ、起きるのです。
-どんなガベージコレクションもまったくない、低レベルの言語では、
-適切な時期にデストラクタが呼び出されることをまったく当てに出来ません。
-そのため、プログラマは、明示的にデストラクタを呼び、メモリや状態の
-後かたづけをする必要があります。
-C++ とは違って、オブジェクトのデストラクタは、ほとんど、Perl では
-必要とされていません。
-そして、デストラクタがあるときでさえ、明示的呼び出しは、ありません。
-Person クラスの場合は、デストラクタを必要としません。
-というのは、メモリの割り当て解除のような単純な問題は、
-Perl が面倒をみるからです。
+정말 좋은 오브젝트지향 프로그램 언어에서는, 유저는 파괴자가 
+호출되는 때를 신경쓰지 않습니다.
+발생할 때에는, 단지 발생하는 것입니다.
+어떤 가비지컬렉션도 가지지 않은, 낮은 레벨에의 언어에서는, 
+적절한 시기에 파괴자가 호출되는 것을 전혀 생각치도 않습니다.
+그 때문에 프로그래머는 명시적으로 파괴자를 호출하고, 메모리나 상태의 
+뒷정리를 할 필요가 있습니다.
+C++ 와는 달리, 오브젝트의 파괴자는 대부분, Perl 에서는 
+필요로 하지 않습니다.
+그리고, 파괴자가 있을 때에도, 명시적 호출은 없습니다.
+Person 클래스의 경우는 파괴자를 필요로 하지 않습니다.
+이것은, 메모리의 할당 해제같은 단순한 문제는 
+Perl 이 알아서 해주기 때문입니다.
 
 =begin original
 
@@ -665,9 +661,9 @@ when there's a circularity in the data structure, such as:
 
 =end original
 
-Perl のリファレンスに基づく、ガベージコレクションが働かない唯一の状況は、
-データ構造に循環性があるときです。
-次のようなものです：
+Perl 의 리퍼런스에 기반한, 가비지컬렉션이 움직이지 않는 유일한 상황은, 
+데이터 구조에 순환성이 있을 때입니다.
+다음같은 것입니다:
 
     $this->{WHATEVER} = $this;
 
@@ -684,17 +680,16 @@ pass happens a bit more frequently--whenever a thread shuts down.)
 
 =end original
 
-プログラムがメモリリークをしないことを期待するなら、この場合、自己参照を
-手動で削除しなければなりません。
-明らかに、エラーを起こしやすい状態で、これは、ただ今できるベストなことです。
-にもかかわらず、プログラムが終わるときに、そのオブジェクトのデストラクタが
-全て正式に呼ばれるので、安全が保証されます。
-そのため、次のことが保証されます。
-プログラムが終了していない唯一の場合をのぞいて、オブジェクトが、
-I<最終的に>適切に、破壊されます。
-(他のアプリケーションに、埋め込んで Perl を走らせているなら、この徹底した
-ガベージコレクションの通過は、普段より少々頻繁に - スレッドが終了する度に -
-起こります)。
+프로그램이 메모리 릭을 하지 않는 것을 기대한다면, 이 경우에는, 자기참조를 
+수동으로 제거하지 않으면 안됩니다.
+명백하게 에러를 발생시키기 쉬운 상태에서 이것은 단지 지금 할 수 있는
+최고의 일입니다. 하지만, 프로그램이 끝날 때, 그 오브젝트의 파괴자가 
+모두 정식으로 호출되기에, 안전이 보증됩니다.
+그 때문에 다음 일이 보증됩니다.
+프로그램이 종료하지 않는 유일한 경우를 빼고는, 오브젝트가 
+I<최종적으로> 적절하게 파괴합니다.
+(다른 어플리케이션에, 심어진 Perl 을 실행하려면, 가비지컬렉션의 통과는 
+보통 보다 조금씩 빈번하게 - 스레드가 종료할 때에 - 발생합니다).
 
 =head2 Other Object Methods
 
