--- a/trunk/perldoc/ko/perl/5.10/perltoot.pod
+++ b/trunk/perldoc/ko/perl/5.10/perltoot.pod
@@ -693,7 +693,7 @@ I<최종적으로> 적절하게 파괴합니다.
 
 =head2 Other Object Methods
 
-(他のオブジェクトメソッド)
+(다른 오브젝트 메소드)
 
 =begin original
 
@@ -707,17 +707,16 @@ be made through methods.
 
 =end original
 
-今までに話しているメソッドは、コンストラクタか、他は、単純な
-"データメソッド"であり、
-オブジェクトに蓄えられているデータへのインターフェースです。
-これらのデータは、C++ での、オブジェクトのデータメンバに少し似ています。
-見知らぬ人がデータとして、オブジェクトのデータメンバに
-アクセスできないことを期待します。
-その代わりに、オブジェクトのデータメンバにデータメソッド経由で、
-間接的にアクセスすべきです。
-このことは Perl で、重要なルールです。
-Perl では、オブジェクトのデータへのアクセスは、メソッドを通して I<のみ>
-なされるべきです。
+지금까지 이야기한 메소드는 생성자 이외는 단순한 "데이터 메소드"이고,
+오브젝트에 축적된 데이터의 인터페이스입니다.
+이 데이터들은 C++에서의 오브젝트의 데이터멤버와 조금 닮았습니다.
+뭔지 모르고 보는 사람이 데이터로써, 오브젝트의 데이터멤버에 접근ㄹ 수 없는 것을
+기대하고 있습니다.
+그 대신에, 오브젝트의 데이터멤버에 데이터메소드 경유로,
+간접적으로 접근해야합니다.
+이 것은 Perl 에서, 중요한 룰입니다.
+Perl 에서는, 오브젝트의 데이터로의 접근은, 메소드를 통해서I<만> 
+이루어져야 합니다.
 
 =begin original
 
@@ -732,17 +731,15 @@ is not enforced by Perl itself.  It's up to the programmer to behave.
 
 =end original
 
-Perl は、誰がどのメソッドを使えるかの制限を押しつけません。
-パブリック と プライベート の違いは慣例によるもので、構文にはよりません。
-(たぶん、L<変数としてのデータメンバ> に、下の方で記述する Alias モジュールを
-使わない場合は)。
-メソッドの名前が一つか、2 つののアンダースコアで始まっているか、
-終わっているものを見ることがあるでしょう。
-このマークは、慣例的に次のことを示します。
-そのメソッドがそのクラスだけ、および、密接なその知合い、つまりサブクラスの
-プライベートなものであることを示します。
-ですが、この区別は Perl 自身によって、強制されてはいません。
-そう振る舞うことは、プログラマしだいです。
+Perl 은, 누군가가 어느 메소드를 사용할 수 있는 가의 제한을 둘 수 없습니다.
+퍼블릭 과 프라이베이트 의 차이는 관례에 따른 는 것으로 구문에 따르지 않습니다.
+(아마도, L<변수로써의 데이터멤버>에, 아래처럼 기술하는 Alias 모듈을 
+사용하지 않는 경우는).
+메소드의 이름이 하나, 2개의 언더바로 시작되거나 끝나는 것을 본 적이 있을겁니다.
+그 메소드가 그 클래스만, 그리고, 밀접한 그 사이에, 즉 서브클래스의 
+프라이베이트한 것을 나타냅니다.
+하지만, 이 구별은 Perl 자신에 의해 강제되어 있지는 않습니다.
+그런 행동을 하는 것은, 프로그래머에 달려있습니다.
 
 =begin original
 
@@ -753,12 +750,11 @@ do more than fetch or set one particular field.
 
 =end original
 
-メソッドを単純なデータにアクセスするものだけに限定する理由はありません。
-メソッドは、まったく、なんでもできます。
-キーポイントは、メソッドは、オブジェクトかクラスを背景に
-呼び出されるということです。
-たとえば、一つの特別なフィールドから値を持ってきたりセットしたりする
-以上のことをするオブジェクトメソッドを示しましょう。
+메소드를 단순한 데이터에 접근하는 것만으로 한정하는 이유는 없습니다.
+메소드는 아무것이라도 될수 있습니다.
+키 포인트는, 메소드는 오브젝트나 클래스를 배경으로 호출되는 것입니다.
+예를들어, 하나의 특별한 필드에서 값을 얻어오거나, 정의하거나 하는 
+이상의 것을 하는 오브젝트 메소드를 나타내봅시다.
 
     sub exclaim {
         my $self = shift;
@@ -772,7 +768,7 @@ Or maybe even one like this:
 
 =end original
 
-または、次のようなもの：
+또는, 다음과 같은 것:
 
     sub happy_birthday {
         my $self = shift;
@@ -809,18 +805,18 @@ your class but even you yourself from changes in your data representation.
 
 =end original
 
-ですが、これらのメソッドはクラス自身ですべて実行できるので、このことは
-重要ではないかもしれないません。
-トレードオフがあります。
-直接なハッシュのアクセスはそうでない場合より速く(実際のところ、
-およそ桁違いに速く)、文字列に手を加えたい時には、より便利です。
-ですが、メソッド(外部のインターフェース)を使うと、内部的に、
-クラスを使う人だけでなく、クラスの作者自身が、データ表現に変更を
-加えることの盾にもなります。
+하지만, 이 메소드들ㅡㄴ 클래스 스스로 모두 실행할 수 있기에, 이것은 
+중요하지 않을 지도 모릅니다.
+트레이드오프가 있습니다.
+직접적인 해쉬의 접근은 그렇지 않은 경우보다도 빨리(실제로는 자릿수차이만큼
+빨리), 문자열을 수정하고 싶은 때에는 보다 편리합니다.
+하지만, 메소드(외부의 인터페이스)를 사용하면, 내부적으로
+클래스를 사용하는 사람만이 아닌, 클래스를 만든 사람스스로가 데이터 표현을 
+수정할 수도 있습니다.
 
 =head1 Class Data
 
-(クラスデータ)
+(클래스데이터)
 
 =begin original
 
@@ -830,10 +826,9 @@ like to keep track of the total people alive.  How do you implement that?
 
 =end original
 
-"クラスデータ" - クラスのそれぞれのオブジェクトに共通のデータアイテム - とは
-なんでしょう?
-何のためにクラスデータが欲しいでしょう? 
-たぶん、Person クラスでは、生きている人々の総数を追っておきたいでしょう。
+"클래스데이터" - 클래스의 각각의 오브젝트에 공통의 데이터아이템 - 이라는 것은
+뭘까요? 뭐 때문에 클래스데이터가 필요할까요?
+아마 Person 클래스에서는 살아 있는 사람들의 총수를 알아두고 싶겠죠?
 
 =begin original
 
@@ -847,15 +842,15 @@ traditional module rather than an object-oriented one, you might do that.
 
 =end original
 
-$Person::Census と呼ばれるグローバル変数でそういうことが I<できます>。
-ですが、そのようにする唯一の理由は、人々が直接にクラスデータを
-得られるようにしたい場合です。
-$Person::Census と言うだけで、それをいじることが出来ます。
-あなたの考えでは、そういったことは構わないのかもしれません。
-ひょっとすると、変数が持ち出されることさえ、望んでいるかもしれません。
-持ち出されるのであれば、(パッケージの)グローバル変数でなければなりません。
-これがオブジェクト指向的なモジュールでなく、伝統的なモジュールであれば、
-そうすればいいでしょう。
+$Person::Census 라고 불리는 글로벌 변수에서 그런 것이 I<가능합니다>.
+하지만, 그렇게 하는 유일한 이유는, 사람들이 직접 클래스데이터를 
+얻을 수 있도록 하고싶을 경우입니다.
+$Person::Census 라고 말하는 것만으로, 그것을 건드릴 수가 있습니다.
+당신의 생각으로는, 그런 것은 상관없을 지도 모르겠습니다.
+혹시나, 변수가 가지고 나가는 것도 바라고 있을지도 모르겠습니다.
+가지고 나간다면, (패키지의) 글로벌 변수가 아니면 안됩니다.
+이것이 오브젝트지향적인 모듈이 아닌, 전통적인 모듈이면,
+그렇게 하면 될겁니다.
 
 =begin original
 
@@ -867,14 +862,14 @@ just as you provide object methods to access object data.
 
 =end original
 
-クラス変数をパッケージのグローバル変数にするやり方は、ほとんどの伝統的な
-モジュールで、期待されています。
-ですが、このやり方は、一般的に、ほとんどのオブジェクト指向のモジュールでは、
-むしろ下手なものと考えられています。
-オブジェクト指向のモジュールでは、(訳註：データを)保護をするベールを設けて、
-実装とインターフェースを分離します。
-ですから、オブジェクトデータにアクセスするオブジェクトメソッドを
-提供するのと同じように、クラスデータにアクセスするクラスメソッドを提供します。
+클래스 변수를 패키지의 글로벌 변수로 하는 방법은, 대부분의 전통적인 
+모듈에서 기대하고 있습니다.
+하지만, 이런 방법은, 일반적으로 대부분의 오브젝트 지향의 모듈에서는,
+오히려 어리석은 것이라고 생각합니다.
+오브젝트지향의 모듈에서는, 데이터를 보호하는 베일을 설치하고, 
+구성과 인터페이스를 분리합니다.
+하지만, 오브젝트 데이터에 접근하는 오브젝트 메소드를 
+제공하는 것처럼, 클래스 데이터에 접근하는 클래스메소드를 제공합니다.
 
 =begin original
 
@@ -885,11 +880,11 @@ tied object as described in L<perltie>, thereby intercepting all accesses.
 
 =end original
 
-それで、まだ、$Census をパッケージのグローバル変数とし続けることが、
-I<できますし>、そして、他人がモジュールの契約を支持し、そのために、
-その実装をいじくり回さないと信頼することが I<できます>。
-かなりトリッキーに、L<perltie>に記述されているように、$Census を、
-tie されたオブジェクトにすることもできます。
+그래서, 아직 $Census 를 패키지의 글로벌 변수로 계속하는 것이,
+I<가능하고>, 다른 사람이 모듈의 계약을 지지하고, 그 때문에 
+그 구성을 건드리지 않으면 신뢰하는 것이 I<가능합니다>.
+꽤 트릭키하게, L<perltie> 에 기술되어 있듯, $Census 를 tie 된
+오브젝트로 하는 것도 가능합니다.
 
 =begin original
 
@@ -898,9 +893,8 @@ file-scoped lexical.  To do so, simply put this at the top of the file:
 
 =end original
 
-ですが、たいていは、クラスデータをファイルスコープのレキシカル変数に
-したいと思います。
-そうするためには、ファイルの上の方で、単純に次のものを置けばいいのです：
+하지만, 대개는 클래스데이터를 파일영역의 렉시컬변수로 하고 싶죠.
+그렇게 하기위해서는, 파일 에 단순히 다음과 같은 것을 두면 됩니다:
 
     my $Census = 0;
 
@@ -915,12 +909,12 @@ given temporary values via local(), though.
 
 =end original
 
-my() のスコープは、ふつう宣言されたブロックが終わったとき(この場合では、
-全てのファイルが必要とされ、使われているとき)が期限ですが、Perl の
-レキシカル変数の深い束縛は、そのスコープ内で宣言された関数に
-アクセスできる間は、変数が割り当て解除されないことを保証します。
-このことは、local() にて、一時的な値を与えられたグローバル変数では、
-働きません。
+my() 의 영역은, 보통 선언된 블록이 끝날 때(이 경우에서는, 
+모든 파일이 필요하고, 사용될 때)가 기한이지만, Perl 의 
+렉시컬 변수의 깊은 동작은 그 영역 안에서 선언된 변수에 
+접근할 수 있는 사이에, 변수가 할당해제되지 않는 것을 보증합니다. 
+이 것은, local() 에서, 일시적인 값을 주어진 글로벌 변수에서는,
+움직이지 않습니다.
 
 =begin original
 
@@ -930,9 +924,9 @@ changes to your Person::new() constructor:
 
 =end original
 
-$Census をパッケージのグローバル変数のままにするか、代わりに、
-ファイルスコープのレキシカル変数にするかどうかに関わりなく、
-Person::new() コンストラクタに、次のような変更をするべきです。
+$Census 를 패키지의 글로벌 변수로 할것인가, 대신에,
+파일 영역의 렉시컬 변수로 할 것인가에 상관없이,
+Person::new() 생성자에, 다음같은 변경을 해야합니다.
 
     sub new {
         my $class = shift;
@@ -957,9 +951,8 @@ this could be done:
 
 =end original
 
-こうしたことで、もちろん、Person が壊れたときに、$Census を減らすために、
-デストラクタが必要になります。
-次のようにします：
+이렇게 해서 물론, Person 이 없어질 때에, $Census 를 없애기위해,
+파괴자가 필요합니다. 다음과 같이 합니다.
 
     sub DESTROY { --$Census }
 
@@ -970,9 +963,9 @@ something that Perl takes care of for you all by itself.
 
 =end original
 
-デストラクタ内で、割り当て解除するためのメモリがないことに、どのようにして
-気づくのでしょう?
-そのことは、Perl自身が面倒をみます。
+파괴자 안에서, 할당해제하기 위한 메모리가 없는 것을 어떻게 해서 
+알수 있을 까요?
+그것은 Perl 스스로가 알아서 해줍니다.
 
 =begin original
 
@@ -981,11 +974,11 @@ CPAN.
 
 =end original
 
-代わりに、CPANから、Class::Data::Inheritable モジュールを使うことも出来ます。
+대신에, CPAN에서 Class::Data::Inheritable 모듈을 사용할 수도 있습니다.
 
 =head2 Accessing Class Data
 
-(クラスデータにアクセスする)
+(클래스데이터에 접근하기)
 
 =begin original
 
@@ -1002,19 +995,17 @@ to inheritance.
 
 =end original
 
-クラスデータを絶えず取り扱うやり方は、本当によくないことがわかります。
-十分に拡張的なルールは、I<オブジェクトメソッドから、直接にクラスデータを
-参照しない> ことです。
-そうでなければ、拡張的な、継承できるクラスは作らないことです。
-オブジェクトは、全てのオペレーションのために、ランデブーポイントに
-いなければなりません。
-特に、とりわけオブジェクトメソッドからは。グローバル変数(クラスデータ)は、
-ある意味で、派生クラスの中で、"間違った"パッケージにあります。
-Perlでは、メソッドはメソッドが定義されたクラス内のコンテキストで
-実行するのであり、メソッドが動かされたオブジェクトの
-コンテキストでは I<ありません>。
-そのために、名前空間 - メソッド内で、目に見えるパッケージの
-グローバル変数の - は、継承と無関係です。
+클래스데이터를 항상 다루는 방법은, 정말 좋지 않은 것을 알 수 있습니다.
+충분히 확장할 수 있는 룰은, I<오브젝트 메소드에서, 직접 클래스데이터를 
+참조하지 않는다> 는 것입니다.
+그렇지 않으면, 확장할 수 있고, 계승할 수 있는 클래스는 만들 수 없습니다.
+오브젝트는, 모든 오퍼레이션을 위해, 랑데뷰 포인트에 없으면 안됩니다.
+특히, 그 중에서도 오브젝트 메소드에서는, 글로벌 변수(클래스 데이터)는, 
+어떤 의미에서, 파생 클래스 안에서, "다른" 패키지에 있습니다.
+Perl 에서는, 메소드는 메소드가 정의된 클래스 안의 컨텍스트에서
+실행하는 것이고, 메소드가 움직인 오브젝트의 컨텍스트가 I<아닙니다>.
+그 때문에, 이름공간 - 메소드안에서, 눈에 보이는 패키지의 글로벌 변수의 -
+은 계승과 관계없습니다.
 
 =begin original
 
@@ -1026,14 +1017,13 @@ you want, but probably it isn't.
 
 =end original
 
-その名前空間を得られるでしょうか? たぶん、無理です。
-よし、たとえば、他のクラスが、上で定義されているような(訳註:Person クラスの)
-DESTORY メソッドを、(たぶん継承されて)"借りた"としましょう。
-これらの他のクラスのオブジェクトが破壊されたら、オリジナルの $Census 変数は
-変化させられます。
-新しいクラスのパッケージの名前空間の $Census ではありません。
-ひょっとしたら、このことは、あなたの望むものかもしれませんが、十中八九
-違うでしょう。
+그 이름공간을 얻을 수 있을까요? 아마도 무리입니다.
+그럼 예를 들어보죠. 다른 클래스가 위에서 정의되어 있는(Person 클래스) 
+DESTROY 메소드를 (아마도 계승된) "빌렸다"고 합시다.
+이 다른 클래스의 오브젝트들이 파괴된다면, 오리지널 $Census 변수는 
+변화되게 됩니다.
+새로운 클래스의 패키지의 이름공간의 $Census 가 아닙니다.
+혹여나, 이것은 당신이 바라던 바일지도 모르겠지만, 십중팔구 다를 것입니다.
 
 =begin original
 
@@ -1048,16 +1038,14 @@ to perl version 5.004 we'll have to quote the field name.)
 
 =end original
 
-これを修正する方法があります。
-ハッシュのキー "_CENSUS" で、アクセスされる値のデータにリファレンスを
-蓄えます。
-なぜアンダースコアをつけるかって?
-たぶん、たいてい、最初のアンダースコアは、いつも C プログラマに不思議な感覚を
-伝えるからです。
-このフィールドが、特殊であり、NAME や、AGE や PEERS と同じようなパブリックな
-データメンバではないということを思い出させる、単なる、記憶を助ける工夫です。
-(このコードは、strict プラグマをつけて、開発しているので、
-perl 5.004 以前なら、フィールド名をクォートしないといけないでしょう)
+이것을 수정하는 방법이 있습니다.
+해쉬 키 "_CENSUS"로, 접근된 값의 데이터에 리퍼런스를 부여합니다.
+왜 언더바가 붙느냐면, 아마도 최초의 언더바는 항상 C 프로그래머의 
+신기한 감각을 전하기 때문입니다. 이 필드가 특수하고, NAME , AGE, PEERS 처럼 
+퍼블릭한 데이터메소드가 아니라는 것을 생각하면, 단순한 기억을 도와주는 
+궁리입니다.
+(이 코드는, strict 프라그마를 붙여서 개발하고 있기에, 
+perl 5.004 보다 낡은 버젼이라면 필드 이름을 인용하지 않으면 안될겁니다)
 
     sub new {
         my $class = shift;
