--- a/perldoc/ko/perl/5.10/perltoot.pod
+++ b/perldoc/ko/perl/5.10/perltoot.pod
@@ -781,7 +781,7 @@ Some might argue that one should go at these this way:
 
 =end original
 
-次のような方法でやると言う人もいるでしょう：
+다음과 같은 방법으로 한다고 하는 사람도 있을겁니다:
 
     sub exclaim {
         my $self = shift;
@@ -805,7 +805,7 @@ your class but even you yourself from changes in your data representation.
 
 =end original
 
-하지만, 이 메소드들ㅡㄴ 클래스 스스로 모두 실행할 수 있기에, 이것은 
+하지만, 이 메소드들은 클래스 스스로 모두 실행할 수 있기에, 이것은 
 중요하지 않을 지도 모릅니다.
 트레이드오프가 있습니다.
 직접적인 해쉬의 접근은 그렇지 않은 경우보다도 빨리(실제로는 자릿수차이만큼
@@ -1076,7 +1076,7 @@ perl 5.004 보다 낡은 버젼이라면 필드 이름을 인용하지 않으면
 
 =head2 Debugging Methods
 
-(デバッグメソッド)
+(메소드 디버깅)
 
 =begin original
 
@@ -1091,16 +1091,14 @@ and carp() respectively.
 
 =end original
 
-クラスにデバッグのメカニズムがあるのは、一般的です。
-たとえば、オブジェクトが作られるか、破壊される時に、(訳註：デバッグ情報を)
-見たいでしょう。
-そうするためには、デバッグの値をファイルスコープのレキシカル変数に加えます。
-このために、警告と致命的なメッセージを発する標準のCarpモジュールを
-呼びましょう。
-この方法により、自分自身のメーッセージの代わりにcallerのファイル名と
-行数と一緒に出ます;
-もし、自分自身の観点から、警告や致命的なメッセージが欲しいのなら、
-croak() の代わりに、ただ、die() と warn() を、直接に使いましょう。
+클래스에 디버그의 매커니즘이 있는 것은, 일반적입니다.
+예를듦녀, 오브젝트가 만들어졌는지 파괴되었을 때에 디버그 정보를 보고싶겠죠?
+그렇게 하기위해, 디버그의 값을 파일영역의 렉시컬 변수에 넣습니다.
+이 때문에, 경고과 치명적인 메시지를 내는 표준의 Carp 모듈을 호출할 겁니다.
+이 방법에 의해, 자기자신의 메시지 대신에 caller 의 파일이름과 줄 수와 함께
+경고가 나옵니다.
+만약, 자기자신의 관점에서, 경고나 치명적인 메시지를 보고 싶다면, 
+croak() 대신에 그냥 die() 나 warn() 을 직접 사용하면 됩니다.
 
     use Carp;
     my $Debugging = 0;
@@ -1111,7 +1109,7 @@ Now add a new class method to access the variable.
 
 =end original
 
-さて、新しいクラスメソッドに、変数のアクセスを加えましょう。
+그럼, 새로운 클래스메소드에 변수의 접근을 넣어봅다.
 
     sub debug {
         my $class = shift;
@@ -1126,8 +1124,8 @@ Now fix up DESTROY to murmur a bit as the moribund object expires:
 
 =end original
 
-さて、DESTROY に手を入れて、消滅しかけているオブジェクトが失効する時に
-ちょっと文句を言うようにしましょう:
+그럼, DESTROY 를 만져서, 소멸하려는 오브젝트가 사라질 때에 
+조금 경고를 내도록 하겠습니다.
 
     sub DESTROY {
         my $self = shift;
@@ -1142,8 +1140,8 @@ way you could call both of these:
 
 =end original
 
-ひょっとしたら、オブジェクトごとに、デバッグ状態を持ちたいかも知れません。
-両方ともできるを方法があります：
+혹시나, 오브젝트마다 디버상태를 가지고 싶을 지도 모르겠습니다.
+양쪽 모두 할 수 있는 방법이 있습니다.
 
     Person->debug(1);   # entire class
     $him->debug(1);     # just this object
@@ -1156,9 +1154,9 @@ and DESTROY methods as follows:
 
 =end original
 
-こうするためには、デバッグメソッドは、"二頂の"メソッドでなければなりません。
-クラス I<と> オブジェクトの両方で動くメソッドです。
-そのため、debug() と、DESTORY メソッドを次のように、調整します：
+이렇게 하기 위해서는, 디버그메소드는 "이항" 메소드가 아니면 안됩니다.
+클래스 I<와> 오브젝트 로 움직이는 메소드인 겁니다.
+이 때문에 debug() 와 DESTROY 메소드를 다음처럼 수정합니다.
 
     sub debug {
         my $self = shift;
@@ -1187,14 +1185,14 @@ as a class method, manipulates $Person::Debugging not $Employee::Debugging.
 
 =end original
 
-(Employee と呼ばれる)派生クラスが、Person 基底クラスからメソッドを
-継承していると、何が起きるでしょうか?
-C<< Employee->debug() >> は、クラスメソッドとして呼ばれた場合、
-$Employee::Debugging ではなく、$Person::Debugging を操作します。
+(Employee 라고 불리는) 파생클래스가 Person 기본 클래스에서 메소드를 
+계승하면, 뭐가 발생할까요?
+C<< Employee->debug() >> 는 클래스메소드로써 호출된 경우,
+$Employee::Debugging 이 아니라, $Person::Debugging 을 조작합니다.
 
 =head2 Class Destructors
 
-(クラスのデストラクタ)
+(클래스 파괴자)
 
 =begin original
 
@@ -1208,15 +1206,14 @@ or dies of an uncaught signal.  For example,
 
 =end original
 
-オブジェクトのデストラクタは、それぞれの別個のオブジェクトごとの死を
-取り扱います。
-しかし、クラス全体のシャットダウン - これは現在のところプログラムが
-終了した時に起こる - ちょっとした掃除が欲しいときもあります。
-そのような I<クラスのデストラクタ> を作るために、
-そのクラスパッケージの中に、END と名付けられる関数を作ります。
-END の働きは、伝統的なモジュールの END 関数とちょうど似ています。
-プログラムが実行されないか、とらえられないシグナルで死んで、
-プログラムが終了したときにいつでも呼ばれます。
+오브젝트의 파괴자는, 각각의 다른 오브젝트마다 죽음을 취급합니다.
+그러나, 클래스 전체의 셧다운 - 이것은 현재 프로그램이 종료한 때에 발생합니다 - 
+조금 삭제가 필요한 때도 있습니다. 
+그런 I<클래스 파괴자> 를 만들기 위해, 
+클래스 패키지 안에, END 라고 이름지어진 함수를 만듭니다.
+END 의 움직임은 전통적인 모듈의 END 함수와 꽤 비슷합니다.
+프로그램이 실행되지 않았는지 얻을 수 없는 신호로 죽어,
+프로그램이 종료한 때에 언제라도 호출됩니다.
 
     sub END {
         if ($Debugging) {
@@ -1231,12 +1228,12 @@ be called in the opposite order that they were loaded in (LIFO order).
 
 =end original
 
-プログラムが終了しとき、全てのクラスデストラクタ(END 関数)は、
-クラスがロードされたのと反対の順番(LIFO の順番)で呼ばれます。
+프로그램이 종료한 때, 모든 클래스 파괴자(END 함수)는 , 
+클래스가 로드되는 것과 반대의 순서(LIFO 순서)로 호출됩니다.
 
 =head2 Documenting the Interface
 
-(インターフェースをドキュメントにする)
+(인터페이스를 문서화)
 
 =begin original
 
@@ -1252,19 +1249,18 @@ some pods describing the informal interface:
 
 =end original
 
-そして、ドキュメントがあります：今まで、このPersonクラスの I<実装> を
-見せています。
-Person クラスの I<インターフェース> は、Person クラスのドキュメントに
-なります。
-ふつう、このことは、同じファイルに、pod("plain old documentation") の
-フォーマットでドキュメントを置くことを意味します。
-Person の例では、Person.pm ファイルの中に、下に続くドキュメントを配置します。
-たとえ、このドキュメントがほとんどコードに見えても、違います。
-これは、埋め込まれたドキュメントであり、pod2man や、pod2html や、
-pod2text プログラムで使われます。
-Perlのコンパイラは、podをまったく無視します。
-ちょうど、翻訳者がコードを無視するのと同じです。
-略式のインターフェースを記述する pod の例です：
+그리고, 문서가 있습니다: 지금까지, 이 Person 클래스의 I<구성> 을 
+보여주고 있습니다.
+Person 클래스의 I<인터페이스> 는, Person 클래스의 문서가 됩니다.
+보통, 이것은 같은 파일에 pod("plain old documentation") 의 
+포맷으로 문서를 두는 것을 의미합니다.
+Person 의 예제에서, Person.pm 파일의 안에, 아래에 계속할 문서를 배치합니다.
+예를들어, 이 문서가 대부분 코드로 보여도, 다른것입니다.
+이것은 문서가 심어져있는 것이고, pod2man 이나, pod2html 나, pod2text 
+프로그램에서 사용됩니다.
+Perl 의 컴파일러는 pod 를 완전 무시합니. 
+번역자가 코드를 무시하는 것과 같습니다.
+약식의 인터페이스를 기술하는 pod 의 예제입니다:
 
     =head1 NAME
 
@@ -1314,15 +1310,14 @@ has voided the warranty, and you shouldn't worry about their fate.
 
 =end original
 
-インターフェース対実装の問題があります。
-モジュールを開いて、インターフェースの契約の後ろにある、安全に鍵を
-かけられた、全てのプライベートなほのかに輝く小さなものを、
-いじくりまわすようなプログラマには、保証が無効になります。
-彼らの運命を気に病むべきではありません。
+인터페페이스 대 구성의 문제가 있습니다.
+모듈을 열고, 인터페이스의 계약의 뒤에 있는, 안전하게 키를 잠군, 
+모든 프라이베이트한 것에 빛나는 작은 것을 만지는 프로그래머에게는,
+보증이 통하지 않습니다. 그들의 운명을 걱정하지 않아도 됩니다.
 
 =head1 Aggregation
 
-(集約(Aggregation))
+(집약)
 
 =begin original
 
@@ -1336,14 +1331,14 @@ it's their fault for breaking the contract and voiding their warranty.
 
 =end original
 
-後になって、よりよい名前を実装するために、クラスを変えたくなったとしましょう。
-たぶん、ファーストネーム(その人の宗教にかかわりなく、クリスチャンネームと
-呼ばれる)とファミリーネーム(名字と呼ばれる)の両方と、それに加えて、
-ニックネームと称号もサポートしたくなったとします。
-もし、Person クラスを使う人が、このドキュメントに書かれたインターフェースを
-通して、適切にアクセスしていれば、簡単にその下にある実装を変更出来ます。
-もし、そうでなければ、Person クラスを使う人は損をします。
-契約を破り、保証を失効したむくいです。
+나중에, 보다 좋은 이름을 구성하기 위해, 클래스를 바꾸고 싶어졌다고 합시다.
+아마, 첫번째 이름(그 사람의 종교에 상관없이 크리스챤 네임이라고 부릅니다)과
+가족 이름(이름자라고 불리는) 모두 그것에 더해,
+닉네임이라는 칭호를 지원하고 싶다고 하겠습니다.
+만약 Person 클래스를 사용하는 사람이 이 문서에 쓰인 인터페이스를 
+통해서 적절히 접근하면, 단순히 그 아래에 있는 구성을 변경할 수 있습니다.
+만약 그렇지 않으면, Person 클래스를 사용하는 사람은 지게됩니다. 
+계약을 부수고, 보증을 잃어버리거나 합니다. 
 
 =begin original
 
@@ -1353,12 +1348,12 @@ first figure out how you want to use it.  How about we use it this way:
 
 =end original
 
-次のようにして、他のクラスを作ります。
-このクラスは、Fullname というクラスです。
-Fullname クラスとは、どのようなものでしょうか?
-その質問に答えるには、最初に、それをどのように使いたいかを
-把握しなければなりません。
-Fullname クラスは次のように使います:
+다음처럼 해서, 다른 클래스를 만듭니다.
+이 클래스는, Fullname 이라는 클래스입니다.
+Fullname 클래스라는 것은 어떤 것일까요?
+이 질문에 답하기위해, 맨처음에 그것을 어떻게 사용하고 싶은 가를 
+파악해야합니다.
+Fullname 클래스는 다음처럼 사용합니다.
 
     $him = Person->new();
     $him->fullname->title("St");
@@ -1375,9 +1370,8 @@ a full name field this way:
 
 =end original
 
-よし。
-こうするために、Person::new() をフルネームのフィールドをサポートするように、
-次のように変えます：
+좋습니다. 이렇게 하기 위해 Person::new() 를 풀네임의 필드를 지원도록, 
+다음과 같이 바꾸었습니다:
 
     sub new {
         my $class = shift;
@@ -1402,8 +1396,8 @@ Then to support old code, define Person::name() this way:
 
 =end original
 
-それから、古いコードをサポートするために、Person::name() を次のように
-定義します：
+그리고, 낡은 코드를 지원하기 위해, Person::name() 을 다음처럼 
+정의합니다 : 
 
     sub name {
         my $self = shift;
@@ -1419,9 +1413,9 @@ by the appropriate name to access them:
 
 =end original
 
-Fullname クラスがあります。
-データフィールドを持つのにハッシュリファレンスを使ったのと同じテクニックを
-使い、データフィールドにアクセスするのに適切な名前でメソッドを使います：
+Fullname 클래스가 있습니다.
+데이터ㄹ드를 가진 것에 해쉬리퍼런스를 사용한 것과 같은 테크닉을 사용해서,
+데이터 필드에 접근하는 것에 적절한 이름으로 메소드를 사용합니다:
 
     package Fullname;
     use strict;
@@ -1479,7 +1473,7 @@ Finally, here's the test program:
 
 =end original
 
-最後に、テストプログラムです：
+마지막으로, 테스트프로그램입니다:
 
     #!/usr/bin/perl -w
     use strict;
@@ -1511,7 +1505,7 @@ Finally, here's the test program:
 
 =head1 Inheritance
 
-(継承)
+(계승)
 
 =begin original
 
@@ -1525,13 +1519,13 @@ the true inheritance that you find in object modules.)
 
 =end original
 
-オブジェクト指向プログラミングのシステムは、全て、継承の考えをサポートします。
-継承は、一つのクラスが他のクラスの上におんぶすることを意味します。
-ですから、同じコードをくり返し、くり返し、書かなくて済みます。
-つまり、ソフトウェアの再利用です。
-そして、それゆえ、不精 - プログラマの重要な美徳 - に関連します。
-(伝統的なモジュールの import/export メカニズムもまた、コードの再利用の形です。
-ですが、オブジェクトモジュールに見られる、本当の継承よりも単純なものです)
+오브젝트지향프로그래밍의 시스템은, 모두 계승을 지원합니다.
+계승은, 하나의 클래스가 다른 클래스의 위에 얹어진다는 것을 의미합ㄴ디ㅏ.
+그래서, 같은 코드를 반복하고, 반복해서 쓰지않아도 됩니다.
+즉, 소프트웨어의 재이용입니다.
+그리고, 부정 - 프로그램의 중요한 미덕 - 에 관련있습니다.
+(전통적인 모듈의 import/export 매커니즘도 코드의 재 이용형태입니다.
+하지만, 오브젝트모듈에서 보이는, 진정한 계승보다도 단순한 것입니다)
 
 =begin original
 
@@ -1546,16 +1540,16 @@ search of the missing method.
 
 =end original
 
-継承の文法は、時に、言語の核に組み込まれていることがあれば、
-そうでないときもあります。
-Perlは、一つのクラス(や、複数のクラス)から、継承するのに特別な文法は
-ありません。
-その代わりに、意味論においては、全て厳しい。
-それぞれのパッケージには、@ISA と呼ばれる変数があり、@ISA は、(メソッド)継承を
-治めるものです。
-もし、オブジェクトかクラスで、メソッドを呼ぼうとして、そのメソッドが、
-そのオブジェクトのパッケージには見付からないと、Perl は、見付からない
-メソッドを検索するさいに、@ISA を見て、他のパッケージを探しに行きます。
+계승의 문법은, 때로 언어의 핵심에 포함되어 있는 것이 있다면,
+ 그렇지 않은 때도 있습니다.
+Perl 은, 하나의 클래스(또는 복수의 클래스)에서, 계승하는 것에 특별한 문법은 
+없습니다.
+그 대신에 의미론적으로 모두 엄격합니다.
+각각의 패키지에는 @ISA 라고 불리는 변수가 있고, @ISA 는 (메소드) 계승을 
+관리하는 것입니다.
+만약 오브젝트가 클래스로, 메소드를 호출하려고 해서, 그 메소드가 
+그 오브젝트의 패키지에는 보이지 않으면, Perl은 발견할 수 없는 
+메소드를 검색하는 동안에 @ISA 를 보고 다른 패키지를 찾으러 갑니다.
 
 =begin original
 
@@ -1567,13 +1561,13 @@ In this case, we have what's called "single inheritance", or SI for short.
 
 =end original
 
-特別なパッケージ毎の、Exporterで、見分けれる変数
-(@EXPORT,@EXPORT_OK,@EXPORT_FAIL,%EXPORT_TAGS,$VERSION)のように、
-@ISA 配列は、パッケージスコープのグローバル変数で I<なければならず>、
-my() で作られるファイルスコープのレキシカル変数であっては I<いけません>。
-ほとんどのクラスで、@ISA 配列には一つのものしかありません。
-このことは、"単一継承"と呼ばれるものです。
-省略して、SI とも呼ばれます。
+특별한 패키지마다 Exporter로 나누는 변수(@EXPORT, @EXPORT_OK,
+@EXPORT_FAIL, %EXPORT_TAGS, $VERSION)처럼 
+@ISA 배열은 패키지영역의 글로벌 변수가 I<아니면 안되고>, 
+my() 로 만들어진 파일영역의 렉시컬 변수여서는 I<안됩니다>.
+대부분의 클래스에서, @ISA 배열에는 하나밖에 없습니다.
+이 것은 "단순 계승"이라고 불리는 것입니다.
+생략해서 SI라고도 불립니다.
 
 =begin original
 
@@ -1581,7 +1575,7 @@ Consider this class:
 
 =end original
 
-このクラスについて、考えてみましょう：
+이 클래스에 대해서, 생각해 봅시다:
 
     package Employee;
     use Person;
@@ -1597,12 +1591,10 @@ We rely upon an Employee to behave just like a Person.
 
 =end original
 
-多くないでしょ?
-今のところ、この Employee クラスがするのは、他のクラスをロードすることと、
-必要なら、その、他のクラスからメソッドを継承することを始めることだけです。
-Employee クラスには、それ自身のメソッドを与えてはいません。
-ですが、Employee クラスに、ちょうど Person クラスのような振る舞いを
-当てにします。
+많지 않죠? 지금, 이 Employee 클래스가 하는 것은 다른 클래스를 로드하는 것과,
+필요하다면, 다른 클래스에서 메소드를 계승하는 것을 시작하는 것뿐입니다.
+Employee 클래스에는, 각자의 메소드를 주어서는 안됩니다.
+하지만, Employee 클래스에 Person 클래스같은 행동을 합니다.
 
 =begin original
 
@@ -1614,11 +1606,11 @@ old one.  This means you should be able to write a program like this:
 
 =end original
 
-このような空のクラスを作ることは、"空のサブクラステスト"と呼ばれます。
-これは、基底クラスから継承する以外には、なにもしない派生クラスを作ることです。
-オリジナルの基底クラスは、適切に設計されていれば、
-新しい派生クラスは、古いものの差し込み式の置換として、使われます。
-このことが意味するのは、次のようにプログラムを書けるということです：
+이런 빈 클래스를 만드는 것은 "빈 서브클래스테스트"라고 불립니다.
+이것ㅡㄴ 기본 클래스에서 계승하는 것 이외에는, 아무것도 하지 않는 파생클래스를 
+만드는 것입니다. 오리지널의 기본 클래스는 적절히 설계되어 있으면, 
+새로운 파생클래스는, 낡은 것의 삽입식의 치환으로써 사용됩니다.
+이것이 의미하는 것은 다음과 같은 프로그램을 쓸 수 있다는 것입니다:
 
     use Employee;
     my $empl = Employee->new();
